made some code changes to fix element overlapping via css codes

--- a/assets/style.css
+++ b/assets/style.css
@@ -236,7 +236,7 @@ div>div.bpdy-details-abt-cont>p:nth-child(7) {
     /* border: 12px solid blanchedalmond; */
     margin-block-start: 150px;
     position: absolute;
-    right: -180px;
+    right: -210px;
     height: 435px;
     /* border-bottom-right-radius: 65px; */
 }
